--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.2"
+    "mysql2": "^3.14.2",
+    "sequelize": "^6.37.7",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
