--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.2",
+    "nodemailer": "^7.0.5",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.3",
     "validator": "^13.15.15"
