--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
