--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
     "redis": "^5.8.1",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.3",
