--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "google-auth-library": "^10.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
