--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "redis": "^5.8.1",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.3",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   },
   "devDependencies": {
